--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="news-list">
+                    <div class="news-list h-100">
                         <div class="inner">
                             <div class="item">
                                 <div class="item-image"></div>
@@ -295,15 +295,6 @@
                                 <input type="text" class="form-control" placeholder="Username" required>
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="First Name" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Middle Name" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Last Name" required>
-                            </div>
-                            <div class="form-group">
                                 <input type="email" class="form-control" placeholder="Email" required>
                             </div>
                             <div class="form-group">
@@ -311,9 +302,6 @@
                             </div>
                             <div class="form-group">
                                 <input type="password" class="form-control" placeholder="Confirm Password" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" placeholder="Password" required>
                             </div>
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </form>
