bets, matchs, players-page, user-page added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Tournaments</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Bet</a>
+                </li>
             </ul>
             <ul class="navbar-nav mt-2 mt-lg-0">
                 <li class="nav-item">
@@ -42,6 +48,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="modal" data-target="#signupModal">Sign up</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"><i class="fas fa-sign-out-alt fa-2x"></i></a>
                 </li>
             </ul>
         </div>
@@ -74,10 +83,10 @@
                 </div>
             </div>
         </section>
-        <section class="news h-100">
-            <div class="inner h-100">
-                <div class="content-block h-100">
-                    <div class="news-show h-100">
+        <section class="news">
+            <div class="inner">
+                <div class="content-block">
+                    <div class="news-show">
                         <div class="news-image">
                             <img src="/images/news3.jpg" alt="">
                         </div>
@@ -104,7 +113,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="news-list h-100">
+                    <div class="news-list" style="height: 100vh;">
                         <div class="inner">
                             <div class="item">
                                 <div class="item-image"></div>
@@ -175,7 +184,7 @@
             </div>
         </section>
         <section class="tournaments h-100">
-            <div class="inner h-100">
+            <div class="inner h-100 position-relative">
                 <h1 class="header">Tournaments</h1>
                 <div class="tournament-list-block h-100">
                     <div class="list-item">
