main pages finished

--- a/admin-page.html
+++ b/admin-page.html
@@ -15,7 +15,7 @@
 <body>
     <div class="sidebar">
         <div class="navbar-brand-block text-center">
-            <a href="/index.html" class="navbar-brand">
+            <a href="/" class="navbar-brand">
                 TENNIS TRACKER
             </a>
         </div>
