--- a/matchs.html
+++ b/matchs.html
@@ -14,7 +14,7 @@
     <div class="match-main">
         <div class="header">
             <div class="inner position-relative">
-                <h1 class="text-center">Bets</h1>
+                <h1 class="text-center">Matchs</h1>
                 <div class="nav-item">
                     <a href="/" class="btn btn-primary">
                         <i class="fas fa-home"></i>
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                         <div class="body p-2">
-                            <a class="btn btn-success bet-btn text-uppercase" href="">Place a bet</a>
+                            <a class="btn btn-success bet-btn text-uppercase" href="bets.html">Place a bet</a>
                         </div>
                     </div>
                 </div>
