--- a/user-page.html
+++ b/user-page.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="nav-item">
-                    <a href="/admin-page.html" class="btn btn-primary">
+                    <a href="/" class="btn btn-primary">
                         <i class="fas fa-home"></i>
                     </a>
                 </div>
