--- a/bets.html
+++ b/bets.html
@@ -46,9 +46,349 @@
         </section>
         <section class="bets-list">
             <div class="list-block">
-                
+                <div class="bet-item">
+                    <div class="inner bet-card">
+                        <div class="bet-name">
+                            <span class="logo mr-3"><img src="/images/tennis_ball.png" alt=""></span>1X2
+                        </div>
+                        <div class="bet-options">
+                            <table border="1">
+                                <tr>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    W1
+                                                </td>
+                                                <td class="text-right">
+                                                    1.008
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    W2
+                                                </td>
+                                                <td class="text-right">
+                                                    251.0
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="bet-item">
+                    <div class="inner bet-card">
+                        <div class="bet-name">
+                            <span class="logo mr-3"><img src="/images/tennis_ball.png" alt=""></span>Total
+                        </div>
+                        <div class="bet-options">
+                            <table border="1">
+                                <tr>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option" data-toggle="modal" data-target="#betModal">
+                                                    Over (20.5)
+                                                </td>
+                                                <td class="text-right">
+                                                    1.608
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    Under (20.5)
+                                                </td>
+                                                <td class="text-right">
+                                                    2.204
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    Over (21)
+                                                </td>
+                                                <td class="text-right">
+                                                    1.7
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    Under (21)
+                                                </td>
+                                                <td class="text-right">
+                                                    2.08
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    Over (21.5)
+                                                </td>
+                                                <td class="text-right">
+                                                    1.83
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    Under (21.5)
+                                                </td>
+                                                <td class="text-right">
+                                                    1.952
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    Over (22)
+                                                </td>
+                                                <td class="text-right">
+                                                    1.91
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    Under (22)
+                                                </td>
+                                                <td class="text-right">
+                                                    1.83
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    Over (22.5)
+                                                </td>
+                                                <td class="text-right">
+                                                    2.032
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    Under (22.5)
+                                                </td>
+                                                <td class="text-right">
+                                                    1.718
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="bet-item">
+                    <div class="inner bet-card">
+                        <div class="bet-name">
+                            <span class="logo mr-3"><img src="/images/tennis_ball.png" alt=""></span>Handicap
+                        </div>
+                        <div class="bet-options">
+                            <table border="1">
+                                <tr>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    1 (2.5)
+                                                </td>
+                                                <td class="text-right">
+                                                    2.016
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    2 (-2.5)
+                                                </td>
+                                                <td class="text-right">
+                                                    1.725
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    1 (3)
+                                                </td>
+                                                <td class="text-right">
+                                                    1.875
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    2 (-3)
+                                                </td>
+                                                <td class="text-right">
+                                                    1.85
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    1 (3.5)
+                                                </td>
+                                                <td class="text-right">
+                                                    1.79
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    2 (-3.5)
+                                                </td>
+                                                <td class="text-right">
+                                                    2.0
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    1 (4)
+                                                </td>
+                                                <td class="text-right">
+                                                    1.61
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    2 (-4)
+                                                </td>
+                                                <td class="text-right">
+                                                    2.23
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    1 (4.5)
+                                                </td>
+                                                <td class="text-right">
+                                                    1.5
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <table>
+                                            <tr>
+                                                <td class="text-left bet-option">
+                                                    2 (-4.5)
+                                                </td>
+                                                <td class="text-right">
+                                                    2.45
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
+    </div>
+    <div class="modal fade bet-modal" id="betModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-primary" id="exampleModalLongTitle">Place a bet</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form class="bet-form text-center">
+                        <div class="form-group text-center">
+                            <label for="amount">Enter the amount:</label>
+                            <input type="number" id="amount" class="form-control" aria-describedby="amountHelp" step="1000" min="500" max="1000000" required>
+                            <small id="amountHelp" class="form-text text-muted">Min=500 and Max=1000000, <span class="text-primary">Odds: </span>2.45 <span class="text-primary">Potential winnings: </span>250000</small>
+                        </div>
+                        <button type="submit" class="btn btn-success" style="width: 30%;">Bet</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
     <footer>
         <div class="inner">
