--- a/index.html
+++ b/index.html
@@ -17,29 +17,35 @@
 </head>
 <body>
     <nav class="navbar custom-nav navbar-expand-lg navbar-dark" id="navbar">
-        <a class="navbar-brand" href="#">TENNIS TRACKER</a>
+        <a class="navbar-brand" href="/">TENNIS TRACKER</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About us</a>
+                    <a class="nav-link" href="#aboutUs">About us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">News</a>
+                    <a class="nav-link" href="#news">News</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tournaments</a>
+                    <a class="nav-link" href="#tournaments">Tournaments</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Dashboard</a>
+                    <a class="nav-link" href="players-page.html">Players</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Bet</a>
+                    <a class="nav-link" href="user-page.html">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="admin-page.html">Admin dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="matchs.html">Match</a>
                 </li>
             </ul>
             <ul class="navbar-nav mt-2 mt-lg-0">
@@ -56,7 +62,7 @@
         </div>
     </nav>
     <div class="main">
-        <section class="home h-100">
+        <section class="home h-100" id="home">
             <div class="inner h-100">
                 <div class="content-block">
                     <div class="content">
@@ -66,7 +72,7 @@
                 </div>
             </div>
         </section>
-        <section class="about-us h-100">
+        <section class="about-us h-100" id="aboutUs">
             <div class="inner h-100">
                 <div class="content-block h-100">
                     <div class="content-image h-100">
@@ -83,7 +89,7 @@
                 </div>
             </div>
         </section>
-        <section class="news">
+        <section class="news" id="news">
             <div class="inner">
                 <div class="content-block">
                     <div class="news-show">
@@ -183,7 +189,7 @@
                 </div>
             </div>
         </section>
-        <section class="tournaments h-100">
+        <section class="tournaments h-100" id="tournaments">
             <div class="inner h-100 position-relative">
                 <h1 class="header">Tournaments</h1>
                 <div class="tournament-list-block h-100">
