--- a/players-page.html
+++ b/players-page.html
@@ -16,7 +16,7 @@
             <div class="inner position-relative">
                 <h1 class="text-center">Players</h1>
                 <div class="nav-item">
-                    <a href="index.html" class="btn btn-primary">
+                    <a href="/" class="btn btn-primary">
                         <i class="fas fa-home"></i>
                     </a>
                 </div>
